--- a/static/style.css
+++ b/static/style.css
@@ -80,7 +80,11 @@ body {
     margin: 5px 5px 5px 0;
     border-radius: 3px;
     color: var(--branco);
+    box-shadow: 10px 0px 10px #2c2c2c;
+    z-index: 99;
 }
+
+
 
 .pai .grafico .cubtotal {
     display: flex;
