--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@
 
 }    
 body {
-    background-color: var(--azul1);
+    background-color: var(--branco);
 }
 
 .terceiro {
@@ -67,21 +67,19 @@ body {
 /* ####### ESTILO DO PAINEL GRAFICO  ########*/
 .pai {
     display: flex;
-    background-color: var(--azul1);
+    
 }
 
 .pai .grafico {
     height: 700px;
     width: 100%;
-    background-color: var(--azul3);
+    background-color: var(--azul2);
     justify-content: center;
     align-items: normal;
     text-align: center;
     margin: 5px 5px 5px 0;
     border-radius: 3px;
     color: var(--branco);
-    box-shadow: 10px 0px 10px #2c2c2c;
-    z-index: 99;
 }
 
 
@@ -94,7 +92,7 @@ body {
 }
 
 .cubGeral{
-    background-color: var(--azul2);
+    background-color: var(--azul3);
     margin: 5px 5px 5px 5px;
     border-radius: 5px;
     
@@ -103,7 +101,7 @@ body {
 .pai .grafico .cubtotal .total{
     width: 115px;
     height: 30px;
-    background-color: var(--azul2);
+    background-color: var(--azul3);
     margin: 5px 5px 5px 5px;
     border-radius: 5px;
 }
@@ -112,12 +110,12 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: var(--azul2);
-    height: 150px;
+    background-color: var(--branco);
+    height: 230px;
     margin: 5px 5px 5px 5px;
     gap: 10px;
     border-radius: 5px;
-    font-size: 0.6rem;
+    font-size: 0.8rem;
     color: var(--branco);
 }
 
