--- a/templates/index.html
+++ b/templates/index.html
@@ -79,23 +79,23 @@
         </section>
         
         <div class="grafico">
-            <h1>INDICADORES</h1>
-            <div class="cubGeral">
-                <P>Cubagem Total</P>
-                <span>{{Dgrafico[0]}}</span>
-            </div>
+            
             <div class="cubtotal">
                 <div class="total">
-                    <p>Cub Terceiro</p>
-                    <span>{{Dgrafico[8]}}</span>
+                    <P>Total</P>
+                    <span>{{Dgrafico[0]}} cub</span>
                 </div>
                 <div class="total">
-                    <p>Cub Claudino</p>
-                    <span>{{Dgrafico[7]}}</span>
+                    <p>Terceiro</p>
+                    <span>{{Dgrafico[8]}} cub</span>
                 </div>
                 <div class="total">
-                    <p>Cub Escoamento</p>
-                    <span>{{Dgrafico[9]}}</span>
+                    <p>Claudino</p>
+                    <span>{{Dgrafico[7]}} cub</span>
+                </div>
+                <div class="total">
+                    <p>Escoamento</p>
+                    <span>{{Dgrafico[9]}} cub</span>
                 </div>
             </div>
 
