--- a/templates/index.html
+++ b/templates/index.html
@@ -100,8 +100,8 @@
                 </div>
             </div>
 
-            <div id="rosca" >
-                <canvas id="myChart"></canvas>
+            <div class="rosca" >
+                <canvas id="grafico1"></canvas>
             </div>
             
             <div class="conf" id="chartdiv2">
