--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                     </div>
                 </div>
                 <div class="logo">
-                    <img src="/static/images.jpg" alt="Não a imagem">
+                    <img src="{{item[22]}}" alt="Não a imagem">
                 </div>
             </div>
             {% endfor %}
@@ -103,8 +103,8 @@
             <div class="rosca" >
                 <canvas id="grafico1"></canvas>
             </div>
-            
-            <div class="conf" id="chartdiv2">
+            <div class="rosca" >
+                <canvas id="grafico2"></canvas>
             </div>
             
         </div>
