--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,7 @@
             <div class="rosca" >
                 <canvas id="grafico1"></canvas>
             </div>
-            <div class="rosca" >
+            <div class="barra" >
                 <canvas id="grafico2"></canvas>
             </div>
             
