--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
-<body class="body">
+<body">
     <section class="terceiro">
         <div class="painel">
             <h1>PAINEL DE CARREGAMENTO DIÁRIO!</h1>
