--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,48 @@
             </form>
         </div>
     </section>
-    
+    <main class="table" id="customers_table">
+        
+        <section class="table__body">
+            <table>
+                <thead>
+                    <tr>
+                        <th> SEQ <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> CLT <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> MOTORISTA <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> DESTINO <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> CONFERENTE <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> PLACA <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> CUB <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> STATUS <span class="icon-arrow">&UpArrow;</span></th>
+                        <th> IMG <span class="icon-arrow">&UpArrow;</span></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in registro %}
+                    <tr>
+                        <td> {{item[0]}} </td>
+                        <td> {{item[1]}} </td>
+                        <td> {{item[2]}} </td>
+                        <td> {{item[3]}} </td>
+                        <td> {{item[4]}}</td>
+                        <td> {{item[5]}}</td>
+                        <td>{{item[6]}}</td>
+                        <td><p class="status delivered">CONCLUÍDO</p></td>
+                        <td> <img src="{{item[22]}}" alt=""></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </section>
+
+    </main>
+
+    <main class="grafico">
+        <div><h1>GRÁFICOS</h1></div>
+    </main>
+
+
     <div class="pai">
         <section class="mestre">
         
