--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,9 @@
 }    
 body {
     background-color: var(--branco);
+    display: flex;
 }
+
 
 .terceiro {
     display: flex;
@@ -57,9 +59,7 @@ body {
 
 /* ####### ESTILO TABELA  ########*/
 /* ####### ESTILOTABELA  ########*/
-body {
-    display: flex;
-}
+
 
 main.table {
     width: 100%;
@@ -179,9 +179,58 @@ tbody tr.hide td img {
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: normal;
     background-color: #006b21;
+    margin: 5px 5px 5px 0;
+    border-radius: 3px;
+    color: var(--branco);
 }
 
+.grafico .cubtotal {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 0.8rem;
+}
+
+
+.grafico .cubtotal .total{
+    width: 95px;
+    height: 30px;
+    background-color: var(--azul3);
+    margin: 5px 5px 5px 5px;
+    border-radius: 5px;
+}
+
+
+.rosca {
+    display: flex;
+    height: 230px;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--branco);
+    margin: 0 5px 0 5px;
+    border-radius: 5px;
+
+}
+
+.barra {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--branco);
+    margin: 5px 5px 0 5px;
+    border-radius: 5px;
+
+}
+
+.futer {
+    background-color: var(--azul3);
+}
+
+
+/* ####### FIM DO ESTILO PAINEL GRÁFICO  ########*/
 
 @media (max-width: 1000px) {
     td:not(:first-of-type) {
@@ -302,305 +351,8 @@ thead th.active,tbody td.active {
 /* ####### FIM DO ESTILO TABELA  ########*/
 /* ####### FIM DO ESTILO TABELA  ########*/
 
-
-
-#clt ,#cub {
-    width: 40px;
-}
-
-#mot ,#dest {
-    width: 300px;
-}
-
-
-/* ####### ESTILO DO PAINEL GRAFICO  ########*/
-.pai {
-    display: flex;
-    background-color: var(--azul1);
-}
-
-.pai .grafico {
-    height: 700px;
-    width: 380px;
-    background-color: var(--azul2);
-    justify-content: center;
-    align-items: normal;
-    text-align: center;
-    margin: 5px 5px 5px 0;
-    border-radius: 3px;
-    color: var(--branco);
-}
-
-
-
-.pai .grafico .cubtotal {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 0.8rem;
-}
-
-
-.pai .grafico .cubtotal .total{
-    width: 115px;
-    height: 30px;
-    background-color: var(--azul3);
-    margin: 5px 5px 5px 5px;
-    border-radius: 5px;
-}
-
-.pai .conf {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: var(--branco);
-    height: 230px;
-    margin: 5px 5px 5px 5px;
-    gap: 10px;
-    border-radius: 5px;
-    font-size: 0.8rem;
-    color: var(--branco);
-}
-
-
-canvas #grafico1{
-    border: 1px solid gainsboro;
-    background: white;
-    box-shadow: 3ox 3px 10px rgba(0, 0, 0, 0.1);
-
-}
-
-.rosca {
-    display: flex;
-    height: 230px;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--branco);
-    margin: 0 5px 0 5px;
-    border-radius: 5px;
-
-}
-
-.barra {
-    display: flex;
-    height: 300px;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--branco);
-    margin: 5px 5px 0 5px;
-    border-radius: 5px;
-}
-
-
-
-
-
-
-
-/* ####### FIM DO ESTILO PAINEL GRÁFICO  ########*/
-
-
-.mestre .principal {
-    width: 950px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px 5px 5px 5px;
-    padding: 0 5px 0 5px;
-    background-color: var(--azul2);
-    border-radius: 3px;
-}
-
-.logo {
-    background-color: var(--azul3);
-    border-radius: 3px;
-}
-
-.logo img {
-    width: 40px;
-    border-radius: 50%;
-    display: flex;
-    
-}
-
-.card {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-    margin-right: 10px;
-    border-radius: 5px;
-    padding: 3px 0 3px 0;
-}
-
-.menu  {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    color: var(--branco);
-    justify-content: space-between;
-    
-}
-
-.menu div {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    gap: 7px;
-}
-
-.menu h1 {
-    font-size: 0.7rem;
-}
-
-.menu span {
-    font-size: 0.7rem;
-}
-
-.menu .destino {
-    width: 250px;
-    
-}
-.menu .motorista {
-    width: 250px;
-    
-}
-
-.menu #CONF {
-    width: 50px;
-}
-
-/* ####### ESTILO DAS FASES  ########*/
-
-.mae {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    margin: 0 3px 3px 3px;
-}
-
-.fase {
-    width: 100%;
-    height: 20px;
-    color: var(--branco);
-    border-radius: 3px;
-    align-items: center;
-    font-size: 0.5rem;
-    background-color: var(--azul3);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.fase i {
-    color: var(--vermelho);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-}
-
-
-
-
-/* SECTION NÃO CARREGAMENTO*/
-.noCcarregamento {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.noCcarregamento h1 {
-    font-size: 2rem;
-    color: var(--azul3);
-}
-
-
-footer {
-    background-color: var(--azul3);
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    color: var(--branco);
-    font-size: 0.8rem;
-    padding-right: 10px;
-}
-
-
 .porcento{
     display: none;
 }
 
 
-/*ESTILO DA FASE CONCLUÍDO*/
-.concluido {
-    width: 100%;
-    height: 20px;
-    color: var(--branco);
-    border-radius: 3px;
-    align-items: center;
-    font-size: 0.5rem;
-    background-color: var(--verde);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.concluido i {
-    color: var(--branco);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-}
-
-/*ESTILO DA FASE CANCELADO*/
-.cancelado {
-    width: 100%;
-    height: 20px;
-    color: var(--branco);
-    border-radius: 3px;
-    align-items: center;
-    font-size: 0.5rem;
-    background-color: var(--vermelho);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.cancelado i {
-    color: var(--branco);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-}
-
-
-/*ESTILO DA FASE ADIADO*/
-.adiado {
-    width: 100%;
-    height: 20px;
-    color: var(--branco);
-    border-radius: 3px;
-    align-items: center;
-    font-size: 0.5rem;
-    background-color: var(--amarelo);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.adiado i {
-    color: var(--branco);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-}
