--- a/static/style.css
+++ b/static/style.css
@@ -205,7 +205,7 @@ tbody tr.hide td img {
 
 .rosca {
     display: flex;
-    height: 230px;
+    height: 40%;
     justify-content: center;
     align-items: center;
     background-color: var(--branco);
@@ -221,12 +221,16 @@ tbody tr.hide td img {
     align-items: center;
     background-color: var(--branco);
     margin: 5px 5px 0 5px;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
 
 }
 
 .futer {
     background-color: var(--azul3);
+    text-align: right;
+    font-size: 0.7rem;
+    margin: 0 5px 0 5px;
+    padding-right: 10px;
 }
 
 
