--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,13 @@
             <div class="painel">
                 <h1>PAINEL DE CARREGAMENTO DIÁRIO!</h1>
                 <form action="/cadastrar" method="post">
-                    <input type="text" name="clt" id="clt" placeholder="clt">
-                    <input type="text" name="mot" id="mot" placeholder="motorista">
-                    <input type="text" name="dest" id="dest" placeholder="destino">
+                    <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 300px;">
+                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 300px;">
                     <input type="text" name="conf" id="conf" placeholder="conferente">
-                    <input type="text" name="placa" id="placa" placeholder="placa">
-                    <input type="text" name="cub" id="cub" placeholder="cub">
-                    <input type="submit" name="add" id="add">
+                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 100px;">
+                    <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
+                    <input type="submit" name="add" id="add" style="width: 60px;">
                     
                 </form>
             </div>
@@ -96,7 +96,7 @@
             <canvas id="grafico2"></canvas>
         </div>
 
-        <div class="futer"><p>Desenvolvido pro Francisco Neponuceno</p></div>
+        <div class="futer"><p>Desenvolvido por Francisco Neponuceno</p></div>
     </main>
     
     <div class="porcento">
