--- a/static/style.css
+++ b/static/style.css
@@ -196,15 +196,19 @@ tbody tr.hide td img {
 
 
 .grafico .cubtotal .total{
-    width: 110px;
+    width: 100px;
     height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: var(--azul3);
-    margin: 5px 5px 5px 5px;
+    margin: 5px 2px 5px 2px;
     border-radius: 5px;
+    
 }
 
 .grafico .cubtotal .total span{
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 
