--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
                 <h1>PAINEL DE CARREGAMENTO DIÁRIO!</h1>
                 <form action="/cadastrar" method="post">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
-                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 300px;">
-                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 300px;">
-                    <input type="text" name="conf" id="conf" placeholder="conferente">
-                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 100px;">
+                    <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
+                    <input type="text" name="dest" id="dest" placeholder="destino" style="width: 280px;">
+                    <input type="text" name="conf" id="conf" placeholder="conferente" style="width: 100px;">
+                    <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
                     <input type="submit" name="add" id="add" style="width: 60px;">
                     
