--- a/templates/index.html
+++ b/templates/index.html
@@ -90,12 +90,15 @@
         </div>
 
         <div class="rosca" >
-            <canvas id="grafico1"></canvas>
+            <canvas id="grafico1" style="width: 500; height: 500;"></canvas>
         </div>
-        <div class="barra" >
-            <canvas id="grafico2"></canvas>
+        <div class="barra" style="position: relative; height:180px; width:100" >
+            <canvas id="grafico2" ></canvas>
         </div>
-
+        <div class="barra" style="position: relative; height:100%; width:100">
+            <canvas id="grafico3"></canvas>
+        </div>
+        
         <div class="futer"><p>Desenvolvido por Francisco Neponuceno</p></div>
     </main>
     
