--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,7 @@
     --vermelho2: #f86f6f;
     --branco: #ffffff;
     --verde: #008000;
+    --verde0: #86e49d;
     --amarelo: #ffa500;
 
 }    
@@ -164,14 +165,15 @@ tbody tr.hide td img {
 }
 
 .status {
-    padding: .4rem 0;
+    padding: .5rem 0;
     border-radius: 2rem;
     text-align: center;
 }
 
-.status.delivered {
+.status.concluido {
     background-color: #86e49d;
     color: #006b21;
+    font-size: 0.7rem;
 }
 
 /* ESTILO DOS GRAFICO */
