--- a/templates/index.html
+++ b/templates/index.html
@@ -59,8 +59,8 @@
                         <td> {{item[4]}}</td>
                         <td> {{item[5]}}</td>
                         <td>{{item[6]}}</td>
-                        <td><p class="status concluido">CONCLUÍDO</p></td>
-                        <td> <img src="{{item[22]}}" alt=""></td>
+                        <td><p class="status {{item[7]}}">{{item[8]}}</p></td>
+                        <td> <img src="{{item[9]}}" alt=""></td>
                     </tr>
                     {% endfor %}
                 </tbody>
