--- a/templates/index.html
+++ b/templates/index.html
@@ -89,8 +89,8 @@
             </div>
         </div>
 
-        <div class="rosca" style="position: relative; height:180px; width:100" >
-            <canvas id="grafico1" ></canvas>
+        <div class="chart-container">
+            <canvas id="chart"></canvas>
         </div>
         <div class="barra" style="position: relative; height:180px; width:100" >
             <canvas id="grafico2" ></canvas>
