--- a/templates/index.html
+++ b/templates/index.html
@@ -92,10 +92,10 @@
         <div class="chart-container">
             <canvas id="chart"></canvas>
         </div>
-        <div class="barra" style="position: relative; height:180px; width:100" >
+        <div class="chart-container"  >
             <canvas id="grafico2" ></canvas>
         </div>
-        <div class="barra" style="position: relative; height:100%; width:100">
+        <div class="chart-container" >
             <canvas id="grafico3"></canvas>
         </div>
         
