--- a/static/style.css
+++ b/static/style.css
@@ -76,10 +76,11 @@ main.table {
 
 .table__body {
     width: 100%;
-    max-height: calc(100% - 1rem);
+    max-height: calc(89% - 1.6rem);
     background-color: var(--azul1);
     overflow: auto;
     overflow: overlay;
+    
 }
 
 
@@ -125,6 +126,7 @@ thead th {
     background-color: var(--azul3);
     cursor: pointer;
     color: var(--branco);
+    
 }
 
 tbody tr:nth-child(even) {
@@ -216,8 +218,8 @@ tbody tr.hide td img {
 
 /*CANCELADO*/
 .status.cancelado {
-    background-color: var(--vermelho2);
-    color: var(--vermelho);
+    background-color: #d893a3;
+    color: #b30021;
     font-size: 0.7rem;
     font-weight: bold;
 }
