--- a/static/style.css
+++ b/static/style.css
@@ -155,6 +155,10 @@ tbody tr td img {
     transition: .2s ease-in-out;
 }
 
+tbody .seq{
+    padding-left: 10px;
+}
+
 tbody tr.hide td,
 tbody tr.hide td p {
     padding: 0;
