--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,7 @@
         </div>
 
         <div class="chart-container">
+            <p>%</p>
             <canvas id="chart"></canvas>
         </div>
         <div class="chart-container"  >
@@ -113,7 +114,19 @@
         <p id="porcentoTerceiro">{{Dgrafico[10]}} </p>
         <p id="porcentoClaudino">{{Dgrafico[11]}}</p>
         <p id="porcentoEscoamento">{{Dgrafico[12]}}</p>
-        <p id="cubagemMes">{{graficoMes}}</p>
+        <p id="jan">{{graficoMes[0]}}</p>
+        <p id="fev">{{graficoMes[1]}}</p>
+        <p id="mar">{{graficoMes[2]}}</p>
+        <p id="abr">{{graficoMes[3]}}</p>
+        <p id="mai">{{graficoMes[4]}}</p>
+        <p id="jun">{{graficoMes[5]}}</p>
+        <p id="jul">{{graficoMes[6]}}</p>
+        <p id="ago">{{graficoMes[7]}}</p>
+        <p id="set">{{graficoMes[8]}}</p>
+        <p id="out">{{graficoMes[9]}}</p>
+        <p id="nov">{{graficoMes[10]}}</p>
+        <p id="dez">{{graficoMes[11]}}</p>
+
     </div>
 
     <script src="/static/script.js"></script>
