--- a/static/style.css
+++ b/static/style.css
@@ -281,6 +281,7 @@ tbody tr.hide td img {
 
 
 .chart-container {
+    display: flex;
     position: relative;
     margin: auto;
     height: 29vh;
