--- a/static/style.css
+++ b/static/style.css
@@ -403,7 +403,7 @@ thead th.active,tbody td.active {
 /* ####### FIM DO ESTILO TABELA  ########*/
 
 .porcento{
-    display: none;
+    display: block;
 }
 
 
