--- a/templates/index.html
+++ b/templates/index.html
@@ -77,15 +77,15 @@
             </div>
             <div class="total">
                 <p>Terceiro</p>
-                <span>{{Dgrafico[8]}} cub</span>
+                <span>{{Dgrafico[13]}}%</span>
             </div>
             <div class="total">
                 <p>Claudino</p>
-                <span>{{Dgrafico[7]}} cub</span>
+                <span>{{Dgrafico[14]}}%</span>
             </div>
             <div class="total">
                 <p>Escoamento</p>
-                <span>{{Dgrafico[9]}} cub</span>
+                <span>{{Dgrafico[15]}}%</span>
             </div>
         </div>
 
@@ -110,9 +110,12 @@
         <p id="cubVicente">{{Dgrafico[4]}}</p>
         <p id="cubCaze">{{Dgrafico[5]}}</p>
         <p id="cubZecarlos">{{Dgrafico[6]}}</p>
-        <p id="porcentoTerceiro">{{Dgrafico[10]}} </p>
-        <p id="porcentoClaudino">{{Dgrafico[11]}}</p>
-        <p id="porcentoEscoamento">{{Dgrafico[12]}}</p>
+        <p id="cubFernando">{{Dgrafico[7]}}</p>
+        <p id="cubRaione">{{Dgrafico[8]}}</p>
+        <p id="cubLucas">{{Dgrafico[9]}}</p>
+        <p id="porcentoTerceiro">{{Dgrafico[13]}} </p>
+        <p id="porcentoClaudino">{{Dgrafico[14]}}</p>
+        <p id="porcentoEscoamento">{{Dgrafico[15]}}</p>
         <p id="jan">{{graficoMes[0]}}</p>
         <p id="fev">{{graficoMes[1]}}</p>
         <p id="mar">{{graficoMes[2]}}</p>
