--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                     <input type="text" name="conf" id="conf" placeholder="conferente" style="width: 100px;">
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
-                    <input type="submit" name="add" id="add" style="width: 60px;">
+                    <input type="submit" name="add" id="add" style="width: 70px;" value="Adicionar">
                     
                 </form>
             </div>
