--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
         <section class="terceiro">
             <div class="painel">
-                <h1>PAINEL DE CARREGAMENTO DIÁRIO!</h1>
+                <h1>PAINEL DE CARREGAMENTO!</h1>
                 <form action="/cadastrar" method="post">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
@@ -101,7 +101,7 @@
             <canvas id="grafico3"></canvas>
         </div>
         
-        <div class="futer"><p>Desenvolvido por Francisco Neponuceno</p></div>
+        
     </main>
     
     <div class="porcento" style="display: none;">
