--- a/templates/index.html
+++ b/templates/index.html
@@ -98,9 +98,10 @@
             <canvas id="grafico2" ></canvas>
         </div>
         
-        <div class="chart-container" >
-            <canvas id="grafico3"></canvas>
+        <div class="chart-container"  >
+            <div id="chartdiv"></div>
         </div>
+        
         
         
     </main>
