--- a/static/style.css
+++ b/static/style.css
@@ -297,6 +297,14 @@ tbody tr.hide td img {
     width: 100%;
     height: 100%;
     font-size: 0.7rem;
+    
+}
+
+#chartdiv2 {
+    width: 100%;
+    height: 100%;
+    font-size: 0.7rem;
+    
 }
 
 
