--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
             <canvas id="chart"></canvas>
         </div>
         <div class="chart-container"  >
-            <canvas id="grafico2" ></canvas>
+            <div id="chartdiv2"></div>
         </div>
         
         <div class="chart-container"  >
