--- a/static/style.css
+++ b/static/style.css
@@ -297,14 +297,18 @@ tbody tr.hide td img {
     width: 100%;
     height: 100%;
     font-size: 0.7rem;
-    
 }
 
 #chartdiv2 {
     width: 100%;
     height: 100%;
     font-size: 0.7rem;
-    
+}
+
+#chartdiv3 {
+    width: 100%;
+    height: 100%;
+    font-size: 0.7rem;
 }
 
 
