--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div class="chart-container">
-            <canvas id="chart"></canvas>
+            <div id="chartdiv3"></div>
         </div>
         <div class="chart-container"  >
             <div id="chartdiv2"></div>
