--- a/static/style.css
+++ b/static/style.css
@@ -283,6 +283,7 @@ tbody tr.hide td img {
 
 .chart-container {
     display: flex;
+    flex-direction: column;
     position: relative;
     margin: auto;
     height: 29vh;
@@ -308,6 +309,11 @@ tbody tr.hide td img {
 #chartdiv3 {
     width: 100%;
     height: 100%;
+    font-size: 0.7rem;
+    
+}
+
+.title{
     font-size: 0.7rem;
 }
 
