--- a/templates/index.html
+++ b/templates/index.html
@@ -97,13 +97,16 @@
         </div>
 
         <div class="chart-container">
+            <p class="title">Cubagem diária</p>
             <div id="chartdiv3"></div>
         </div>
-        <div class="chart-container"  >
+        <div class="chart-container">
+            <p class="title">Cubagem por conferente</p>
             <div id="chartdiv2"></div>
         </div>
         
-        <div class="chart-container"  >
+        <div class="chart-container">
+            <p class="title">Cubagem mensal</p>
             <div id="chartdiv"></div>
         </div>
         
