--- a/templates/index.html
+++ b/templates/index.html
@@ -80,19 +80,19 @@
         <div class="cubtotal">
             <div class="total">
                 <P>Total</P>
-                <span>{{Dgrafico[0]}} cub</span>
-            </div>
-            <div class="total">
-                <p>Terceiro</p>
-                <span>{{Dgrafico[13]}}%</span>
+                <span>{{Dgrafico[0]}} m³</span>
             </div>
             <div class="total">
                 <p>Claudino</p>
-                <span>{{Dgrafico[14]}}%</span>
+                <span>{{Dgrafico[10]}} m³</span>
+            </div>
+            <div class="total">
+                <p>Terceiro</p>
+                <span>{{Dgrafico[11]}} m³</span>
             </div>
             <div class="total">
                 <p>Escoamento</p>
-                <span>{{Dgrafico[15]}}%</span>
+                <span>{{Dgrafico[12]}} m³</span>
             </div>
         </div>
 
