--- a/static/style.css
+++ b/static/style.css
@@ -107,8 +107,8 @@ table {
 }
 
 td img {
-    width: 38px;
-    height: 38px;
+    width: 37px;
+    height: 37px;
     margin-right: .5rem;
     border-radius: 50%;
     vertical-align: middle;
@@ -119,7 +119,8 @@ table, th, td {
     border-collapse: collapse;
     padding: 0.2rem;
     text-align: left;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    font-weight: bold;
 }
 
 thead th {
