--- a/static/style.css
+++ b/static/style.css
@@ -134,7 +134,8 @@ thead th {
 }
 
 tbody tr:nth-child(even) {
-    background-color: #0000000b;
+    background-color:var(--azul1);
+    
 }
 
 tbody tr {
