--- a/templates/index.html
+++ b/templates/index.html
@@ -79,20 +79,20 @@
     <main class="grafico">
         <div class="cubtotal">
             <div class="total">
-                <P>Total</P>
-                <span>{{Dgrafico[0]}} m³</span>
+                <P>Total m³</P>
+                <span>{{Dgrafico[0]}}</span>
             </div>
             <div class="total">
                 <p>Claudino</p>
-                <span>{{Dgrafico[10]}} m³</span>
+                <span>{{Dgrafico[17]}} <i class="bi bi-truck"></i></span>
             </div>
             <div class="total">
                 <p>Terceiro</p>
-                <span>{{Dgrafico[11]}} m³</span>
+                <span>{{Dgrafico[16]}} <i class="bi bi-truck"></i></span>
             </div>
             <div class="total">
                 <p>Escoamento</p>
-                <span>{{Dgrafico[12]}} m³</span>
+                <span>{{Dgrafico[18]}} <i class="bi bi-truck"></i></span>
             </div>
         </div>
 
