--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,11 @@
 
         <section class="terceiro">
             <div class="painel">
-                <h1>PAINEL DE CARREGAMENTO!</h1>
+                <div class="logo">
+                    <img src="/static/Onix.jpg" alt="">
+                    <h1>PAINEL DE CARREGAMENTO! </h1>
+                    <img src="/static/socimol.png" alt="">
+                </div>
                 <form action="/cadastrar" method="post">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
