--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,11 @@
         <section class="terceiro">
             <div class="painel">
                 <div class="logo">
-                    <img src="/static/Onix.jpg" alt="">
+                    <img src="/static/onix.svg" alt="">
                     <h1>PAINEL DE CARREGAMENTO! </h1>
                     <img src="/static/socimol.png" alt="">
                 </div>
+                <!--
                 <form action="/cadastrar" method="post">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
@@ -40,6 +41,7 @@
                     <input type="submit" name="add" id="add" style="width: 70px;" value="Adicionar">
                     
                 </form>
+                -->
             </div>
         </section>
         
