--- a/static/style.css
+++ b/static/style.css
@@ -291,6 +291,7 @@ tbody tr.hide td img {
     margin: 5px 2px 5px 2px;
     border-radius: 5px;
     box-shadow: 3px 3px 3px #757575;
+    font-weight: bold;
 }
 
 .grafico .cubtotal .total span{
@@ -314,7 +315,7 @@ tbody tr.hide td img {
     justify-content: center;
     align-items: center;
     box-shadow: 3px 3px 3px #757575;
-    
+    font-weight: bold;
   }
 
   .chart-container p {
