--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel de Carregamento Kanban</title>
+    <title>Painel de Carregamento</title>
     <!--link do bostrep-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!--fim do link bootrep-->
@@ -30,7 +30,7 @@
                     <h1>PAINEL DE CARREGAMENTO! </h1>
                     <img src="/static/socimol.png" alt="">
                 </div>
-                <!--
+               
                 <form action="/cadastrar" method="post">
                     <input type="text" name="clt" id="clt" placeholder="clt" style="width: 40px;">
                     <input type="text" name="mot" id="mot" placeholder="motorista" style="width: 280px;">
@@ -38,10 +38,10 @@
                     <input type="text" name="conf" id="conf" placeholder="conferente" style="width: 100px;">
                     <input type="text" name="placa" id="placa" placeholder="placa" style="width: 80px;">
                     <input type="text" name="cub" id="cub" placeholder="cub" style="width: 40px;">
-                    <input type="submit" name="add" id="add" style="width: 70px;" value="Adicionar">
-                    
+                    <input type="submit" name="add" id="add" style="width: 30px;" value="+">
+                    <input type="submit" name="add" id="add" style="width: 30px;" value="-">
                 </form>
-                -->
+               
             </div>
         </section>
         
